--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <title>Roster</title>
 </head>
 <body>
+  <button id="zoom-out-button">Zoom Out</button>
 <div class="blackboard">
 <div class="team home-team">
 <img alt="Home Team Logo" class="team-logo" src="https://images.squarespace-cdn.com/content/v1/619758344d16e93725c39d0a/b60879b9-e503-4231-b6a6-61d6b4951bd8/RBFC+-+Dark.png?format=100w"/>
