--- a/index.html
+++ b/index.html
@@ -14,12 +14,56 @@
 <div class="team home-team">
 <img alt="Home Team Logo" class="team-logo" src="https://images.squarespace-cdn.com/content/v1/619758344d16e93725c39d0a/b60879b9-e503-4231-b6a6-61d6b4951bd8/RBFC+-+Dark.png?format=100w"/>
 <h2>Real Bedford</h2>
-<ul class="player-list home-player-list"><li contenteditable="true">1. </li><li contenteditable="true">2. </li><li contenteditable="true">3. </li><li contenteditable="true">4. </li><li contenteditable="true">5. </li><li contenteditable="true">6. </li><li contenteditable="true">7. </li><li contenteditable="true">8. </li><li contenteditable="true">9. </li><li contenteditable="true">10. </li><li contenteditable="true">11. </li><br/><li class="subs-heading">Substitutes</li><br/><li contenteditable="true">12. </li><li contenteditable="true">14. </li><li contenteditable="true">15. </li><li contenteditable="true">16. </li><li contenteditable="true">17. </li><li contenteditable="true">18. </li><li contenteditable="true">19. </li></ul>
+<ul class="player-list home-player-list">
+  <li contenteditable="true" spellcheck="false">1. </li>
+  <li contenteditable="true" spellcheck="false">2. </li>
+  <li contenteditable="true" spellcheck="false">3. </li>
+  <li contenteditable="true" spellcheck="false">4. </li>
+  <li contenteditable="true" spellcheck="false">5. </li>
+  <li contenteditable="true" spellcheck="false">6. </li>
+  <li contenteditable="true" spellcheck="false">7. </li>
+  <li contenteditable="true" spellcheck="false">8. </li>
+  <li contenteditable="true" spellcheck="false">9. </li>
+  <li contenteditable="true" spellcheck="false">10. </li>
+  <li contenteditable="true" spellcheck="false">11. </li>
+  <br/>
+  <li class="subs-heading">Substitutes</li>
+  <br/>
+  <li contenteditable="true" spellcheck="false">12. </li>
+  <li contenteditable="true" spellcheck="false">14. </li>
+  <li contenteditable="true" spellcheck="false">15. </li>
+  <li contenteditable="true" spellcheck="false">16. </li>
+  <li contenteditable="true" spellcheck="false">17. </li>
+  <li contenteditable="true" spellcheck="false">18. </li>
+  <li contenteditable="true" spellcheck="false">19. </li>
+</ul>
 </div>
 <div class="team away-team">
-<img class="team-logo" id="awayTeamLogoImg" src="" style=""/><h2 contenteditable="true" style="color:white;">Away Team Name</h2>
+<img class="team-logo" id="awayTeamLogoImg" src="" style=""/>
+  <h2 contenteditable="true" style="color:white;">Away Team Name</h2>
 <input class="logo-url" id="awayTeamLogoUrl" placeholder="Away Team Logo URL" type="url"/>
-<ul class="player-list away-player-list"><li contenteditable="true">1. </li><li contenteditable="true">2. </li><li contenteditable="true">3. </li><li contenteditable="true">4. </li><li contenteditable="true">5. </li><li contenteditable="true">6. </li><li contenteditable="true">7. </li><li contenteditable="true">8. </li><li contenteditable="true">9. </li><li contenteditable="true">10. </li><li contenteditable="true">11. </li><br/><li class="subs-heading">Substitutes</li><br/><li contenteditable="true">12. </li><li contenteditable="true">14. </li><li contenteditable="true">15. </li><li contenteditable="true">16. </li><li contenteditable="true">17. </li><li contenteditable="true">18. </li><li contenteditable="true">19. </li></ul>
+<ul class="player-list away-player-list">
+  <li contenteditable="true" spellcheck="false">1. </li>
+  <li contenteditable="true" spellcheck="false">2. </li>
+  <li contenteditable="true" spellcheck="false">3. </li>
+  <li contenteditable="true" spellcheck="false">4. </li>
+  <li contenteditable="true" spellcheck="false">5. </li>
+  <li contenteditable="true" spellcheck="false">6. </li>
+  <li contenteditable="true" spellcheck="false">7. </li>
+  <li contenteditable="true" spellcheck="false">8. </li>
+  <li contenteditable="true" spellcheck="false">9. </li>
+  <li contenteditable="true" spellcheck="false">10. </li>
+  <li contenteditable="true" spellcheck="false">11. </li>
+  <br/>
+  <li class="subs-heading">Substitutes</li>
+  <br/>
+  <li contenteditable="true" spellcheck="false">12. </li>
+  <li contenteditable="true" spellcheck="false">14. </li>
+  <li contenteditable="true" spellcheck="false">15. </li>
+  <li contenteditable="true" spellcheck="false">16. </li>
+  <li contenteditable="true" spellcheck="false">17. </li>
+  <li contenteditable="true" spellcheck="false">18. </li>
+  <li contenteditable="true" spellcheck="false">19. </li></ul>
 </div>
 </div>
 <script src="scripts.js"></script>
