--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
@@ -14,6 +12,29 @@
 <div class="team home-team">
 <img alt="Home Team Logo" class="team-logo" src="https://images.squarespace-cdn.com/content/v1/619758344d16e93725c39d0a/b60879b9-e503-4231-b6a6-61d6b4951bd8/RBFC+-+Dark.png?format=100w"/>
 <h2>Real Bedford</h2>
+<select id="home-player-select" class="player-select">
+    <option value="" disabled selected>Select a player</option>
+    <option value="Tyler McGregor">Tyler McGregor</option>
+    <option value="Eddie Corbit">Eddie Corbit</option>
+	<option value="Matt Clifford">Matt Clifford</option>
+	<option value="Tom Wood">Tom Wood</option>
+	<option value="Luke Knight">Luke Knight</option>
+	<option value="Lewis Burgess">Lewis Burgess</option>
+	<option value="Charlie Smith">Charlie Smith</option>
+	<option value="Josh Setchell">Josh Setchell</option>
+	<option value="Lee Watkins">Lee Watkins</option>
+	<option value="Joey Evans">Joey Evans</option>
+	<option value="Ben Stevens">Ben Stevens</option>
+	<option value="Mo Ahmed">Mo Ahmed</option>
+	<option value="James Ducket">James Ducket</option>
+	<option value="Claston Gordon">Claston Gordon</option>
+	<option value="Tom Hitchcock">Tom Hitchcock</option>
+	<option value="Ollie Swain">Ollie Swain</option>
+	<option value="Alfie Bozward">Alfie Bozward</option>
+	<option value="Archie Jones">Archie Jones</option>
+	<option value="Joe Steele">Joe Steele</option>
+    <!-- Add more player options as needed -->
+</select>
 <ul class="player-list home-player-list">
   <li contenteditable="true" spellcheck="false">1. </li>
   <li contenteditable="true" spellcheck="false">2. </li>
