--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	<option value="Joe Steele">Joe Steele</option>
     <!-- Add more player options as needed -->
 </select>
+<button id="refresh-button" style="display: none;">Refresh/Reset</button>
 <ul class="player-list home-player-list">
   <li contenteditable="true" spellcheck="false">1. </li>
   <li contenteditable="true" spellcheck="false">2. </li>
