--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <img alt="Home Team Logo" class="team-logo" src="https://images.squarespace-cdn.com/content/v1/619758344d16e93725c39d0a/b60879b9-e503-4231-b6a6-61d6b4951bd8/RBFC+-+Dark.png?format=100w"/>
 <h2>Real Bedford</h2>
 <div class ="controls">	
-<select id="home-player-select" class="player-select" style="display: none;">
+<select id="home-player-select" class="player-select">
     <option value="" disabled selected>Select a player</option>
     <option value="Tyler McGregor">Tyler McGregor</option>
     <option value="Eddie Corbit">Eddie Corbit</option>
