--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<option value="Joe Steele">Joe Steele</option>
     <!-- Add more player options as needed -->
 </select>
-<button id="refresh-button" style="display: none;">Refresh/Reset</button>
+<button id="refresh-button">Refresh/Reset</button>
 </div>
 <ul class="player-list home-player-list">
   <li contenteditable="true" spellcheck="false">1. </li>
