--- a/index.html
+++ b/index.html
@@ -5,92 +5,30 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <link href="styles.css" rel="stylesheet"/>
 <link rel="icon" href="https://images.squarespace-cdn.com/content/v1/619758344d16e93725c39d0a/fd45bb84-8340-4010-bbde-66f31c1ca075/favicon.ico?format=100w" type="image/x-icon">
-<title>Roster</title>
+<title>RBFC Roster</title>
 </head>
 <body>
-<!--<button id="zoom-out-button">Zoom Out</button>-->
 <div class="blackboard">
 <div class="team home-team">
-<img alt="Home Team Logo" class="team-logo" src="https://images.squarespace-cdn.com/content/v1/619758344d16e93725c39d0a/b60879b9-e503-4231-b6a6-61d6b4951bd8/RBFC+-+Dark.png?format=100w"/>
-<h2>Real Bedford</h2>
-<div class ="controls">	
+<img alt="Home Team Logo" class="team-logo" src="" id="homeTeamLogoImg"/>
+<h2 id="homeTeamName">Home Team</h2>
+<div class="controls">	
 <select id="home-player-select" class="player-select">
     <option value="" disabled selected>Select a player</option>
-    <option value="Tyler McGregor">Tyler McGregor</option>
-    <option value="Eddie Corbit">Eddie Corbit</option>
-	<option value="Matt Clifford">Matt Clifford</option>
-	<option value="Tom Wood">Tom Wood</option>
-	<option value="Luke Knight">Luke Knight</option>
-	<option value="Lewis Burgess">Lewis Burgess</option>
-	<option value="Charlie Smith">Charlie Smith</option>
-	<option value="Josh Setchell">Josh Setchell</option>
-	<option value="Lee Watkins">Lee Watkins</option>
-	<option value="Joey Evans">Joey Evans</option>
-	<option value="Ben Stevens">Ben Stevens</option>
-	<option value="Mo Ahmed">Mo Ahmed</option>
-	<option value="James Ducket">James Ducket</option>
-	<option value="Claston Gordon">Claston Gordon</option>
-	<option value="Tom Hitchcock">Tom Hitchcock</option>
-	<option value="Ollie Swain">Ollie Swain</option>
-	<option value="Alfie Bozward">Alfie Bozward</option>
-	<option value="Archie Jones">Archie Jones</option>
-	<option value="Joe Steele">Joe Steele</option>
-    <!-- Add more player options as needed -->
 </select>
-<button id="refresh-button">Refresh/Reset</button>
+<button id="refresh-button">Refresh</button>
 </div>
-<ul class="player-list home-player-list">
-  <li contenteditable="true" spellcheck="false">1. </li>
-  <li contenteditable="true" spellcheck="false">2. </li>
-  <li contenteditable="true" spellcheck="false">3. </li>
-  <li contenteditable="true" spellcheck="false">4. </li>
-  <li contenteditable="true" spellcheck="false">5. </li>
-  <li contenteditable="true" spellcheck="false">6. </li>
-  <li contenteditable="true" spellcheck="false">7. </li>
-  <li contenteditable="true" spellcheck="false">8. </li>
-  <li contenteditable="true" spellcheck="false">9. </li>
-  <li contenteditable="true" spellcheck="false">10. </li>
-  <li contenteditable="true" spellcheck="false">11. </li>
-  <br/>
-  <li class="subs-heading">Substitutes</li>
-  <br/>
-  <li contenteditable="true" spellcheck="false">12. </li>
-  <li contenteditable="true" spellcheck="false">14. </li>
-  <li contenteditable="true" spellcheck="false">15. </li>
-  <li contenteditable="true" spellcheck="false">16. </li>
-  <li contenteditable="true" spellcheck="false">17. </li>
-  <li contenteditable="true" spellcheck="false">18. </li>
-  <li contenteditable="true" spellcheck="false">19. </li>
-</ul>
+<ul class="player-list home-player-list"></ul>
+<ul class="player-list home-substitute-list"></ul>
 </div>
 <div class="team away-team">
-<img class="team-logo" id="awayTeamLogoImg" src="" style=""/>
-  <h2 contenteditable="true" style="color:white;">Away Team Name</h2>
-<input class="logo-url" id="awayTeamLogoUrl" placeholder="Away Team Logo URL" type="url"/>
-<ul class="player-list away-player-list">
-  <li contenteditable="true" spellcheck="false">1. </li>
-  <li contenteditable="true" spellcheck="false">2. </li>
-  <li contenteditable="true" spellcheck="false">3. </li>
-  <li contenteditable="true" spellcheck="false">4. </li>
-  <li contenteditable="true" spellcheck="false">5. </li>
-  <li contenteditable="true" spellcheck="false">6. </li>
-  <li contenteditable="true" spellcheck="false">7. </li>
-  <li contenteditable="true" spellcheck="false">8. </li>
-  <li contenteditable="true" spellcheck="false">9. </li>
-  <li contenteditable="true" spellcheck="false">10. </li>
-  <li contenteditable="true" spellcheck="false">11. </li>
-  <br/>
-  <li class="subs-heading">Substitutes</li>
-  <br/>
-  <li contenteditable="true" spellcheck="false">12. </li>
-  <li contenteditable="true" spellcheck="false">14. </li>
-  <li contenteditable="true" spellcheck="false">15. </li>
-  <li contenteditable="true" spellcheck="false">16. </li>
-  <li contenteditable="true" spellcheck="false">17. </li>
-  <li contenteditable="true" spellcheck="false">18. </li>
-  <li contenteditable="true" spellcheck="false">19. </li></ul>
+<img class="team-logo" id="awayTeamLogoImg" src=""/>
+<h2 id="awayTeamName">Away Team</h2>
+<ul class="player-list away-player-list"></ul>
+<ul class="player-list away-substitute-list"></ul>
 </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="scripts.js"></script>
 </body>
 </html>
