--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
 </head>
 <body>
 <div class="blackboard">
-<div class="team home-team">
-<img alt="Home Team Logo" class="team-logo" src="" id="homeTeamLogoImg"/>
-<h2 id="homeTeamName">Home Team</h2>
-<ul class="player-list home-player-list"></ul>
-<ul class="player-list home-substitute-list"></ul>
-</div>
-<div class="team away-team">
-<img class="team-logo" id="awayTeamLogoImg" src=""/>
-<h2 id="awayTeamName">Away Team</h2>
-<ul class="player-list away-player-list"></ul>
-<ul class="player-list away-substitute-list"></ul>
-</div>
+  <div class="teams-container">
+    <div class="team home-team">
+      <img alt="Home Team Logo" class="team-logo" src="" id="homeTeamLogoImg"/>
+      <h2 id="homeTeamName">Home Team</h2>
+      <ul class="player-list home-player-list"></ul>
+      <ul class="player-list home-substitute-list"></ul>
+    </div>
+    <div class="team away-team">
+      <img class="team-logo" id="awayTeamLogoImg" src=""/>
+      <h2 id="awayTeamName">Away Team</h2>
+      <ul class="player-list away-player-list"></ul>
+      <ul class="player-list away-substitute-list"></ul>
+    </div>
+  </div>
+  <div class="banner-container">
+    <img src="https://raw.githubusercontent.com/mja1337/roster/main/rbfcsponsors.png" alt="RBFC Sponsors" class="banner-image">
+  </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="scripts.js"></script>
